style.css
* {
    box-sizing: border-box;
    margin: 0;
    scroll-behavior: smooth;
    font-family: 'Inter', system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
    border: unset;
}

body{
    margin: 0;
    background-color: var(--bg-c-board);
}

h1{
    font-size: 61px;
}

.page_wrapper{
    display: flex;
    align-items: stretch;
    min-height: 100vh;
}

.content_wrapper{
    display: flex;
    flex-direction: column;
    flex: 1;

    background-color: var(--bg-c-join);
    width: calc(100% - 232px);

    overflow: hidden;
}

.main_wrapper {
    display: flex;
    flex-direction: column;
    /* align-items: center; */
    align-items: start;
    flex: 1;
    position: relative;
    padding-top: 100px;
    padding-left: 70px;
    padding-right: 70px;
    padding-bottom: 100px;
    min-width: 0;    
}

/* .main_wrapper{
    display: flex;
    flex-direction: column;
    flex: 1;
    position: relative;
    padding: 100px 70px 70px 70px;
    width: 100%;
} */

.main_container{
    display: flex;
    flex-direction: column;
    background-color: var(--bg-c-join);
    gap: 24px;
    width: 100%;
    max-width: 980px;
}

/* --- HEADER --- */

.main_header{
    display: flex;
    align-items: center;
    justify-content: start;
    cursor: default;
}

.main_header span{
    font-size: 27px;
}

.header_separator{
    height: 59px;
    border: 2px solid var(--c-separator-var2);
    margin: 0 30px;
}

.mobile_header_separator{
    display: none;
}


/* --- MAIN CONTENT --- */

.main_content{
    display: flex;
    flex: 1;
    margin-bottom: 16px;

    gap: 40px;
}

/* --- OVERLAY --- */

.overlay_wrapper{
    display: flex;
    align-items: center;
    justify-content: center;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100vh;
    overflow: hidden;
    background-color: rgba(0, 0, 0, 0.531);
}

.overlay_wrapper_animation{
    position: fixed;
    top: 0;
    left: 0;    

    display: flex;
    align-items: start;
    justify-content: center;

    width: 100vw;
    height: 100vh;

    overflow: auto;

    padding: 16px;

    background-color: transparent;
    transition: background-color 2s ease;
    z-index: 103;
}

.overlay_wrapper_animation.active {
    background-color: rgba(0, 0, 0, 0.531);
}

.overlay_close_button{
    background-color: transparent;
    height: 38px;
    width: 38px;
    display: flex;
    align-items: center;
    justify-content: center;
    border: none;
    cursor: pointer;
    border-radius: 50%;
    padding: 0px;    
}

.overlay_close_button:hover{
    background-color: #EEEEEE;
}

.person_icon{
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: 50%;
    height: 42px;
    width: 42px;
    border: 2px solid white;
    color: var(--c-up-initials-var2);
    font-size: 12px;
}

.d_none{
    display: none !important;
}

@media(max-width: 1000px){

    /* .main_wrapper{
        padding: 50px 20px 20px 20px;
    }     */

    .main_wrapper {
        padding-top: 50px;
        padding-left: 30px;
        padding-right: 30px;
        padding-bottom: 50px;
    }
}

@media(max-width: 850px){

    .main_container{
        width: 100%;
        /* max-width: 500px; */ /* ggf. weglassen */
    }

    .main_header{
        flex-direction: column;
        align-items: start;
        gap: 16px;
    }

    h1{
        font-size: 47px;
        margin-bottom: 0;
    }

    .header_separator{
        display: none;
    }

    .mobile_header_separator{
        display: block;
        width: 90px;
        border-top: none;
        border-left: none;
        border-right: none;
        border-bottom: 3px solid var(--c-separator-var2);
        margin: 0;
    }
}


@media(max-width: 750px){

    .main_wrapper {
        padding-top: 24px;
        padding-left: 16px;
        padding-right: 16px;
        padding-bottom: 24px;
        align-items: center;
    }

    .content_wrapper{
        width: 100%;
    }

    .main_container{
        max-width: 500px;
    }
}

@media(max-width: 400px){
    
    .overlay_wrapper_animation{
        padding: 8px;
    }
}

@media(max-width: 320px){
    .main_wrapper {
        padding-left: 20px;
        padding-right: 20px;
    }
}

